# Deepfake-Detector

./: README.md  app.py  detector.py  docker-compose.yml  main.py  models.py  pyproject.toml  replit.nix
backend/: requirements.txt
backend/app/: database.py  init.py  main.py  models.py  schemes.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.jsx  GroupList.jsx  index.js
frontend/src/Components/: BalanceTable.jsx  CreateGroup.jsx  ExpenseList.jsx  Expenseform.jsx  GroupDetails.jsx  Navbar.jsx  UserBalances.jsx
static/css/: custom.css
static/js/: main.js
templates/: about.html  history.html  index.html  layout.html  results.html
