[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask-login>=0.6.3",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "gdown>=5.2.0",
    "gunicorn>=23.0.0",
    "numpy>=2.2.4",
    "opencv-python>=4.11.0.86",
    "psycopg2-binary>=2.9.10",
    "tensorflow>=2.14.0",
    "werkzeug>=3.1.3",
    "flask-wtf>=1.2.2",
    "sqlalchemy>=2.0.40",
    "scipy>=1.15.2",
    "scikit-image>=0.25.2",
]
